@startuml Data Structure
!include https://raw.githubusercontent.com/RicardoNiepel/C4-PlantUML/master/C4_Container.puml

title Data Structure

class "Partner" as P {
    + id: string
    + name: string
    + logo: string
    + api_key: string
    + api_secret: string
    + email: string
    --
    + created_at: datetime
    + updated_at: datetime
    + deleted_at: datetime
}

class "Customer" as C {
    + id: string
    + name: string
    + email: string
    + msisdn: string
    --
    + created_at: datetime
    + updated_at: datetime
    + deleted_at: datetime
}

class "Loyalty" as L {
    + id: string
    + customer_email: string
    + current_tier_name: string
    + current_tier: int
    + next_tier: int
    + previous_tier: int
    + is_point_send: boolean
    + reccuring_transaction: int
    --
    + created_at: datetime
    + updated_at: datetime
    + deleted_at: datetime
}

class "Loyalty Rules"  as LR {
    + id: string
    + loyalty_tier: int
    + min_transaction_applied: int
    + loyalty_point: int
    --
    + created_at: datetime
    + updated_at: datetime
    + deleted_at: datetime
}


class "Promo Redemption" as PRD {
    + id: string
    + partner_id: string
    + is_active: boolean
    + min_quantity: int
    + min_transaction_amount: double
    + max_transaction_amount: double
    + promo_start_date: datetime
    + promo_end_date: datetime
    --
    + created_at: datetime
    + updated_at: datetime
    + deleted_at: datetime
}


class "Transaction" as T {
    + id: string
    + customer_id: string
    + partner_id: string
    + is_cashback_applied: boolean
    + cashback_amount: double
    + transaction_amount: double
    + transaction_quantity: int
    + tier_reward_amount: double
    + tier: int
    + total_reward_amount: double
    --
    + created_at: datetime
    + updated_at: datetime
    + deleted_at: datetime
}


L -- C
L -- LR
PRD }-- P
T }-- C
T }-- P

